tests/success/type_function_param.bz
function test(T: typename) -> bool
{
	return T == i32;
}

static_assert(test(i32));
static_assert(!test(i64));
