tests/error/type_match/typename_mismatched_qualifier2.bz
function test1(T: **typename);

function test()
{
	test1(*const *int32);
}
